--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "core-js": "^3.6.5",
         "express": "^4.17.1",
         "quasar": "^2.0.0",
-        "serve-static": "^1.14.1"
+        "serve-static": "^1.14.1",
+        "vue-slicksort": "^2.0.0-alpha.5",
+        "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.13.14",
