--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@quasar/extras": "^1.0.0",
+        "@vueform/multiselect": "^2.2.0",
         "connect-history-api-fallback": "^1.6.0",
         "core-js": "^3.6.5",
         "express": "^4.17.1",
