--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "quasar": "^2.0.0",
         "serve-static": "^1.14.1",
         "vue-slicksort": "^2.0.0-alpha.5",
+        "vue-socket.io": "^3.0.10",
         "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
